fix: resolve medium-priority issues and improve code quality
Fix #14: Add File.listRoots() fallback on Unix for removable device detection
  in DicomDirImport (was hardcoded to /media, /mnt, /Volumes only)

Fix #16: Add Windows and macOS to CI matrix in maven.yml, Sonar only on Linux

Fix #19: Improve bnd configuration with explicit Export-Package and versioned
  imports for slf4j and logback

Fix #6 (partial): Replace Class.forName() with bundle classloader in 6
  container files (View2dContainer x2, MprContainer, SRContainer, AuContainer,
  View3DContainer) to properly resolve OSGi classes

Fix #6 (partial): Remove dead code blocks in HistogramView (exportcsv method)
  and DicomPrint (commented writeDICOM call)

Fix #6 (partial): Document arrow key conflict in DrawingsKeyListeners instead
  of leaving dead commented code with FIXME

Closes #14, #16, #19
Ref #6, #8, #11